# game_off_2021

./: .gitignore  Procfile  README.md  RustConfig
.github/workflows/: release.yaml
client/: Cargo.toml  Makefile.toml
client/game_plugin/: Cargo.toml
client/game_plugin/src/: actions.rs  lib.rs  loading.rs  lobby.rs  menu.rs  orientation.rs  player.rs
client/game_plugin/src/actions/: game_control.rs
matchbox_socket/: Cargo.toml  Readme.md
matchbox_socket/src/: ggrs_socket.rs
matchbox_socket/src/webrtc_socket/wasm/: message_loop.rs  signalling_loop.rs
server/: Cargo.toml  Readme.md
server/src/: signaling.rs
signaling_server/: Cargo.toml  Readme.md
signaling_server/src/: main.rs
