[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014", default-features = false }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", rev = "b1916e76d81aeb5097dadf7c0458488e670deb47" }
rand = "0.8"
ggrs = "0.5"
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", rev = "12ba7a8d4355a5db445d28ab65714b71d4decdd9" }
matchbox_socket = { path = "../../matchbox_socket", features = ["ggrs-socket"] }

[patch.crates-io]
bevy = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_derive = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_macro_utils = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_reflect = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_utils = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }

[patch.'https://github.com/bevyengine/bevy']
bevy = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_derive = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_macro_utils = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_reflect = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_utils = { git = "https://github.com/NiklasEi/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
